--- a/src/app/components/dashboard/content/patient-visit/visit-information/visit-loader/visit-loader.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-information/visit-loader/visit-loader.component.html
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div class="controller col col-md-12">
-            <button class="primary-button"> Sauvgarder la visite <i class="fa fa-save"></i></button>
+            <button class="primary-button" (click)="saveVsit()"> Sauvgarder la visite <i class="fa fa-save"></i></button>
         </div>
     </div>
 </div>
