--- a/src/app/components/dashboard/content/visits-manager/visits-manager.component.html
+++ b/src/app/components/dashboard/content/visits-manager/visits-manager.component.html
@@ -1,1 +1,8 @@
-<p>visits-manager works!</p>
+<div class="main-container">
+    <app-header></app-header>
+    <div class="body">
+        <div class="search-header">
+            <app-search-header></app-search-header>
+        </div>
+    </div>
+</div>
