--- a/src/app/components/dashboard/content/visits-manager/visits-manager.component.html
+++ b/src/app/components/dashboard/content/visits-manager/visits-manager.component.html
@@ -4,5 +4,11 @@
         <div class="search-header">
             <app-search-header></app-search-header>
         </div>
+        <div class="row">
+            <div class="col col-md-4" *ngFor="let visit of visits">
+                <app-visit [visit]="visit"></app-visit>
+            </div>
+        </div>
     </div>
+
 </div>
