--- a/src/app/components/dashboard/content/visits-manager/visits-list/visits-list.component.html
+++ b/src/app/components/dashboard/content/visits-manager/visits-list/visits-list.component.html
@@ -1,1 +1,42 @@
-<p>visits-list works!</p>
+<div class="main-container">
+    <div class="header stretch-container">
+        <span>
+            Nom
+        </span>
+        <span>
+            Prénom 
+        </span>
+        <span id="width-70">
+            Date de n'essance
+        </span>
+        <!--
+        <span>
+            address 
+        </span>
+        <span>
+            wilaya
+        </span>
+        <span>
+            commune
+        </span>
+    -->
+        <span>
+            teléphone
+        </span>
+        <span>
+            email
+        </span>
+        <span>
+            Etat 
+        </span>
+        <span>
+            montant payé
+        </span>
+        <span>
+            credit
+        </span>
+        <span>
+            period de la visit
+        </span>
+    </div>
+</div>
