--- a/src/app/components/dashboard/content/visits-manager/visits-list/visit-row/visit-row.component.html
+++ b/src/app/components/dashboard/content/visits-manager/visits-list/visit-row/visit-row.component.html
@@ -1,1 +1,13 @@
-<p>visit-row works!</p>
+<div class="visit-container">
+    <div class="stretch-container">
+        <span>{{visit.medicalFile.name}}</span>
+        <span>{{visit.medicalFile.lastname}}</span>
+        <span>{{visit.medicalFile.birthday}}</span>
+        <span>{{visit.medicalFile.phone}}</span>
+        <span>{{visit.medicalFile.email}}</span>
+        <span class="red">{{visit.status}}</span>
+        <span>{{visit.payedMoney}} DA</span>
+        <span>{{visit.debt}} DA</span>
+        <span>{{(visitPeriod) ? (visitPeriod) : ("Inconnue")}}</span>
+    </div>
+</div>
