Pagination design done

--- a/src/app/components/dashboard/content/visits-manager/visits-manager.component.html
+++ b/src/app/components/dashboard/content/visits-manager/visits-manager.component.html
@@ -8,4 +8,8 @@
             <app-visits-list [visits]="visits"></app-visits-list>
         </div>
     </div>
+
+    <div class="pagination-container">
+        <app-pagination [count]="count" [loaded]="visits.length" [offset]="offset" [limit]="limit"></app-pagination>
+    </div>
 </div>
