--- a/src/app/components/global/pagination/pagination.component.html
+++ b/src/app/components/global/pagination/pagination.component.html
@@ -5,15 +5,15 @@
         </div>
         <div class="pagination-side stretch-container">
             <div class="center-v">
-                <i class="fa fa-chevron-left"></i>
+                <i class="fa fa-chevron-left" (click)="previous()" [class.disabled]="currentPage() == 1"></i>
             </div>
             <div class="pages">
-                <div class="page" *ngFor="let page of getPages()" [class.selected]="currentPage() == page">
+                <div class="page" (click)="select(page)" *ngFor="let page of getPages()" [class.selected]="currentPage() == page">
                     <span>{{page}}</span>
                 </div>
             </div>
             <div class="center-v">
-                <i class="fa fa-chevron-right"></i>
+                <i class="fa fa-chevron-right" (click)="next()" [class.disabled]="currentPage() == pagesNum()"></i>
             </div>
         </div>
         <div class="info-side center-v">
