--- a/src/app/components/dashboard/content/waiting-room/new-visit/mini-medical-file/mini-medical-file.component.css
+++ b/src/app/components/dashboard/content/waiting-room/new-visit/mini-medical-file/mini-medical-file.component.css
@@ -2,6 +2,7 @@
     border-radius: 16px;
     box-shadow: 2px 2px 26px rgba(0, 0, 0, 0.05), -2px -2px 26px rgba(0, 0, 0, 0.05);
     position: relative;
+    background: white;
 }
 
 .image-side {
