--- a/src/app/components/global/pop-up-window/pop-up-window.component.html
+++ b/src/app/components/global/pop-up-window/pop-up-window.component.html
@@ -16,5 +16,7 @@
         <app-paye-visit *ngIf="windowPage == 'paye-visit'" (closeEvent)="close()"></app-paye-visit>
         <app-vital-setting *ngIf="windowPage == 'vital-setting'" (closeEvent)="close()"></app-vital-setting>
         <app-clincal-exam-manager *ngIf="windowPage == 'clincal-exam-manager'" (closeEvent)="close()"></app-clincal-exam-manager>
+        <app-visit-advanced-search *ngIf="windowPage == 'visit-advanced-search'" (closeEvent)="close()"></app-visit-advanced-search>
+        <app-medical-file-advanced-search *ngIf="windowPage == 'medical-file-advanced-search'" (closeEvent)="close()"></app-medical-file-advanced-search>
     </div>
 </div>
