--- a/src/app/components/global/search-header/search-header.component.html
+++ b/src/app/components/global/search-header/search-header.component.html
@@ -22,7 +22,7 @@
             <i class="fa fa-search" (click)="search()"></i>
         </div>
         <div class="advanced-search">
-            <a>recherche avancé</a>
+            <a (click)="openAdvancedSearch()">recherche avancé</a>
         </div>
     </div>
 </div>
