date interval done

--- a/src/app/components/dashboard/content/visits-manager/visit-advanced-search/visit-advanced-search.component.html
+++ b/src/app/components/dashboard/content/visits-manager/visit-advanced-search/visit-advanced-search.component.html
@@ -36,4 +36,8 @@
             </div>
         </div>
     </div>
+    <div class="col col-md-12">
+        <app-date-interval [placeholder]="'intervale des visits'"></app-date-interval>
+    </div>
+    <div style="clear: both;"></div>
 </div>
