--- a/src/app/components/dashboard/content/visits-manager/visit-advanced-search/visit-advanced-search.component.css
+++ b/src/app/components/dashboard/content/visits-manager/visit-advanced-search/visit-advanced-search.component.css
@@ -29,7 +29,8 @@ h5 {
     font-weight: bold;
 }
 
-.medical-act i {
+.medical-act i,
+.debt-label i {
     border: 1px solid #eeeeee;
     padding: 3px;
     font-size: 10px;
@@ -41,11 +42,13 @@ h5 {
     background: #eeeeee;
 }
 
-.medical-act:hover i {
+.medical-act:hover i,
+.debt-label:hover i {
     border-color: rgb(38, 94, 215);
 }
 
-.medical-act.selected i {
+.medical-act.selected i,
+.debt-label.selected i {
     border-color: rgb(38, 94, 215);
     color: rgb(38, 94, 215);
 }
@@ -97,4 +100,18 @@ h5 {
     border-radius: 50%;
     padding: 10px 11px;
     cursor: pointer;
+}
+
+.debt-label {
+    cursor: pointer;
+    padding: 16px 0px;
+}
+
+.debt-label i {
+    float: right;
+}
+
+button {
+    float: right;
+    width: 160px;
 }
