Advanced visit search and advanced medical files search done!

--- a/src/app/components/dashboard/content/medical-files-manager/medical-files-manager.component.html
+++ b/src/app/components/dashboard/content/medical-files-manager/medical-files-manager.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="row files-list">
         <div class="col col-md-4" *ngFor="let medicalFile of medicalFiles">
-            <app-mini-medical-file [medicalFile]="medicalFile"></app-mini-medical-file>
+            <app-mini-medical-file [disabelShadow]="true" [medicalFile]="medicalFile"></app-mini-medical-file>
         </div>
     </div>
     <div class="pagination-container">
