--- a/src/app/components/dashboard/content/waiting-room/new-visit/mini-medical-file/mini-medical-file.component.html
+++ b/src/app/components/dashboard/content/waiting-room/new-visit/mini-medical-file/mini-medical-file.component.html
@@ -1,4 +1,4 @@
-<div class="main-container stretch-container">
+<div class="main-container stretch-container" [class.shadow]="!disabelShadow">
 
     <div class="image-side">
         <img src="{{(medicalFile.gender)? ('../../../../../../../../assets/male.jpg') : ('../../../../../../../../assets/female.jpg')}} ">
