--- a/src/app/components/dashboard/content/waiting-room/new-visit/mini-medical-file/mini-medical-file.component.css
+++ b/src/app/components/dashboard/content/waiting-room/new-visit/mini-medical-file/mini-medical-file.component.css
@@ -1,8 +1,11 @@
 .main-container {
     border-radius: 16px;
-    box-shadow: 2px 2px 26px rgba(0, 0, 0, 0.05), -2px -2px 26px rgba(0, 0, 0, 0.05);
     position: relative;
     background: white;
+}
+
+.main-container.shadow {
+    box-shadow: 2px 2px 26px rgba(0, 0, 0, 0.05), -2px -2px 26px rgba(0, 0, 0, 0.05);
 }
 
 .image-side {
