--- a/src/app/components/dashboard/content/patient-visit/visit-prescription/visit-prescription.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-prescription/visit-prescription.component.html
@@ -1,1 +1,8 @@
-<p>visit-prescription works!</p>
+<div class="main-container stretch-container">
+    <div class="side submitter-side primary-radius">
+        <app-drug-submitter></app-drug-submitter>
+    </div>
+    <div class="side prescription-side primary-radius">
+        <app-prescription></app-prescription>
+    </div>
+</div>
