--- a/src/app/components/dashboard/content/patient-visit/visit-prescription/visit-prescription.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-prescription/visit-prescription.component.html
@@ -1,6 +1,6 @@
 <div class="main-container stretch-container">
     <div class="side submitter-side primary-radius">
-        <app-drug-submitter></app-drug-submitter>
+        <app-drug-submitter [visitDrugDosages]="visit.visitDrugDosages"></app-drug-submitter>
     </div>
     <div class="side prescription-side primary-radius">
         <app-prescription></app-prescription>
