--- a/src/styles.css
+++ b/src/styles.css
@@ -54,8 +54,9 @@ body {
     position: relative;
 }
 
-input.is-invalid {
-    border-color: rgb(254, 101, 85);
+input.is-invalid,
+.input-container.is-invalid {
+    border-color: rgb(254, 101, 85) !important;
 }
 
 input.is-invalid::placeholder {
@@ -73,6 +74,13 @@ h5.card-title {
     font-size: 18px;
     color: #212121;
     margin-bottom: 26px;
+}
+
+.primary-title {
+    font-weight: 600;
+    color: #212121;
+    margin: 0px;
+    margin-bottom: 16px;
 }
 
 .secondary-button {
