Presription drug dosages init

--- a/src/app/components/dashboard/content/patient-visit/visit-prescription/prescription/prescription.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-prescription/prescription/prescription.component.html
@@ -4,7 +4,7 @@
             <app-prescription-header [doctor]="doctor" [cabinet]="cabinet"></app-prescription-header>
         </div>
         <div class="body">
-
+            <app-prescription-drug-dosages></app-prescription-drug-dosages>
         </div>
     </div>
 </div>
