prescription patient info done

--- a/src/app/components/dashboard/content/patient-visit/visit-prescription/prescription/prescription-patient-info/prescription-patient-info.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-prescription/prescription/prescription-patient-info/prescription-patient-info.component.html
@@ -1,1 +1,15 @@
-<p>prescription-patient-info works!</p>
+<div class="main-container">
+    <div class="row">
+        <div class="col col-md-6">
+            <p>
+                <i class="fa fa-user-injured"></i> {{visit.medicalFile.lastname}} {{visit.medicalFile.name}} {{age}} ans
+            </p>
+        </div>
+        <div class="col col-md-6 ">
+            <p class="text-right">
+                {{visitDate}} <i class="fa fa-calendar"></i>
+            </p>
+        </div>
+    </div>
+
+</div>
