--- a/src/app/components/dashboard/content/patient-visit/visit-prescription/visit-prescription.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-prescription/visit-prescription.component.html
@@ -3,6 +3,6 @@
         <app-drug-submitter [visitDrugDosages]="visit.visitDrugDosages"></app-drug-submitter>
     </div>
     <div class="side prescription-side primary-radius">
-        <app-prescription></app-prescription>
+        <app-prescription [visit]="visit"></app-prescription>
     </div>
 </div>
