--- a/src/app/components/global/pop-up-window/pop-up-window.component.css
+++ b/src/app/components/global/pop-up-window/pop-up-window.component.css
@@ -1,6 +1,6 @@
 .main-container {
     position: absolute;
-    background: white;
+    background: #F5F6FA;
     left: 50%;
     transform: translateX(-50%);
     margin: 26px 0px;
