--- a/src/app/components/dashboard/content/medical-files-manager/medical-file-advanced-search/medical-file-advanced-search.component.css
+++ b/src/app/components/dashboard/content/medical-files-manager/medical-file-advanced-search/medical-file-advanced-search.component.css
@@ -2,6 +2,11 @@
     padding: 16px;
     width: 460px;
     position: relative;
+    background: white;
+}
+
+#container {
+    padding: 16px;
 }
 
 h5 {
