--- a/src/app/components/global/search-header/search-header.component.html
+++ b/src/app/components/global/search-header/search-header.component.html
@@ -19,6 +19,7 @@
             </select>
         </div>
         <div class="search-button">
+            <i class="fa fa-times" (click)="clear()"></i>
             <i class="fa fa-search" (click)="search()"></i>
         </div>
         <div class="advanced-search">
