Visit manager visit date added

--- a/src/app/components/dashboard/content/visits-manager/visits-list/visit-row/visit-row.component.html
+++ b/src/app/components/dashboard/content/visits-manager/visits-list/visit-row/visit-row.component.html
@@ -4,10 +4,11 @@
         <span>{{visit.medicalFile.lastname}}</span>
         <span>{{visit.medicalFile.birthday}}</span>
         <span>{{visit.medicalFile.phone}}</span>
-        <span>{{visit.medicalFile.email}}</span>
         <span class="red">{{visit.status}}</span>
         <span>{{visit.payedMoney}} DA</span>
         <span>{{visit.debt}} DA</span>
         <span>{{(visitPeriod) ? (visitPeriod) : ("Inconnue")}}</span>
+        <span>{{visitDate}}</span>
+
     </div>
 </div>
