--- a/src/app/components/dashboard/content/visits-manager/visits-list/visits-list.component.html
+++ b/src/app/components/dashboard/content/visits-manager/visits-list/visits-list.component.html
@@ -6,7 +6,7 @@
         <span>
             Prénom 
         </span>
-        <span id="width-70">
+        <span>
             Date de n'essance
         </span>
         <!--
@@ -24,9 +24,6 @@
             teléphone
         </span>
         <span>
-            email
-        </span>
-        <span>
             Etat 
         </span>
         <span>
@@ -37,6 +34,10 @@
         </span>
         <span>
             period de la visit
+        </span>
+
+        <span>
+            Date
         </span>
     </div>
     <div class="body primary-radius">
