Prescription footer init

--- a/src/app/components/dashboard/content/patient-visit/visit-prescription/prescription/prescription.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-prescription/prescription/prescription.component.html
@@ -6,5 +6,8 @@
         <div class="body">
             <app-prescription-drug-dosages [visit]="visit"></app-prescription-drug-dosages>
         </div>
+        <div class="footer">
+            <app-prescription-footer [doctor]="doctor" [cabinet]="cabinet"></app-prescription-footer>
+        </div>
     </div>
 </div>
